# KrakenEngine

./: CMakeLists.txt  Camera.h  Defines.h  EngineSettings.ini  GraphicsMath.cpp  GraphicsMath.h  Kraken Engine.cpp  Kraken Engine.sln  Kraken Engine.vcxproj  Kraken Engine.vcxproj.filters  Math.h  README.md  main.cpp
Kraken Engine/x64/Debug/: Kraken Engine.exe.recipe  Kraken Engine.ilk  vc143.idb
Kraken Engine/x64/Debug/Kraken Engine.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Kraken Engine.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
Kraken Engine/x64/Release/: Kraken Engine.exe.recipe  Kraken Engine.iobj  Kraken Engine.ipdb
Kraken Engine/x64/Release/Kraken Engine.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Kraken Engine.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
header/: Gateware.h  README.md  main.h
include/: main.h  render.h  window.h
include/MATH/: CoreVectors.h  MathFunctions.cpp  PhysicsFunctions.cpp
source/: physics.cpp
src/: audio.cpp  input.cpp  main.cpp  render.cpp  window.cpp
